--- a/app/views/cms/shared/_index.html.erb
+++ b/app/views/cms/shared/_index.html.erb
@@ -1,3 +1,3 @@
-<div id="intro" class="shadow curved">
+<div id="intro" class="panel shadow curved">
   <p>Add a new page or upload a new asset.</p>
 </div>
