--- a/app/views/cms/components/_list.html.erb
+++ b/app/views/cms/components/_list.html.erb
@@ -1,7 +1,9 @@
 <div id="components">
   <%= form_tag cms_components_upload_path, :multipart => true do %>
-    <%= file_field_tag :zip_file %>
-    <%= submit_tag 'Upload' %> <em>.zip files only</em>
+    <div>
+      <%= file_field_tag :zip_file %>
+      <%= submit_tag 'Upload' %> <em>.zip files only</em>
+    </div>
   <% end %>
 
   <% if @cms_components.empty? %>
