--- a/lib/generators/liquid_cms/templates/public/cms/stylesheets/simple_form.css
+++ b/lib/generators/liquid_cms/templates/public/cms/stylesheets/simple_form.css
@@ -35,7 +35,7 @@ form.simple_form a.cancel {
   color: white !important;
   margin-left: 0.3em;
   text-decoration: none;
-  text-shadow: 0 1px #555;
+  text-shadow: 0px 1px 0px #555;
 }
 form.simple_form a.cancel:hover {
   background: #E00;
