fix output block syntax

--- a/app/views/cms/assets/_meta_field.html.erb
+++ b/app/views/cms/assets/_meta_field.html.erb
@@ -1,4 +1,4 @@
-<% f.simple_fields_for :meta, obj ? obj : nil, :index => obj ? idx : 'new_0' do |m| %>
+<%= f.simple_fields_for :meta, obj ? obj : nil, :index => obj ? idx : 'new_0' do |m| %>
 <li>
   <div class="field">
     <%= m.input :name, :placeholder => 'field name', :size => 40 %>
