--- a/app/views/cms/assets/_asset.html.erb
+++ b/app/views/cms/assets/_asset.html.erb
@@ -1,8 +1,7 @@
 <%= content_tag_for :li, asset, :class => cms_row_class do %>
   <%= file_type_icon asset.asset_file_name %>
-  <%= link_to cms_icon('delete.png', :title => 'Delete'), cms_asset_path(asset), :remote => true, :indicator => dom_id(asset, 'progress'), :method => :delete, :confirm => "Are you sure you want to delete the \"#{asset}\" asset?" %>
+  <%= link_to cms_icon('delete.png', :title => 'Delete'), cms_asset_path(asset), :method => :delete, :confirm => "Are you sure you want to delete the \"#{asset}\" asset?" %>
   <%= link_to truncate(asset.asset_file_name, :length => 22), edit_cms_asset_path(asset), :title => asset.asset_file_name %>
-  <%= indicator dom_id(asset, 'progress') %>
 
   <span class="asset_size"><%= number_to_human_size asset.asset_file_size %></span>
 
